# DebtMind-test-case-generator

./: .gitignore  README.md  config.example.json  db_sampler.py  gemini_annotator.py  gen_output_test_cases.py  main.py  payload_builder.py  pyproject.toml  transform.py  unit_test_generator.py  unit_test_main.py
.claude/: settings.json
Evaluation_final/actual_test_cases/: advisor_result.xlsx  advisor_test_case.xlsx  classification_result.xlsx  classification_test_case.xlsx  education_result.xlsx  get_n8n_advisor.ipynb  get_n8n_classification.ipynb  get_n8n_summary.ipynb  summary_result.xlsx  summary_test_case.xlsx
Evaluation_final/advisor/: advisor_eval.ipynb  advisor_eval_results.xlsx
Evaluation_final/classification/: classification_eval.ipynb  classification_eval_results.xlsx  classification_narrative_results.xlsx  test_result.xlsx
Evaluation_final/education/: education_eval.ipynb  education_eval_results.xlsx
Evaluation_final/input Guardrail/: Final_inputGuardrail_test.xlsx  Input_Guardrail_test.ipynb  test_case_InputGuardrail.xlsx
Evaluation_final/input_guardrail/: input_guardrail_eval.ipynb  input_guardrail_eval_results.xlsx
LLM_judge_alignment/: aligned_advisor.ipynb  aligned_classification.ipynb  aligned_education.ipynb  aligned_summary.ipynb
database/: conversation.json  restructure_offer_account.json  restructure_offer_summary.json  session_info.json
raw_ingredient_evaluation/: System Prompt 1.txt  Test Case Educator.xlsx  User Prompt 1.txt  narrative_classification_golden_cases.xlsx  summary_golden_cases.xlsx
(+307 files in other folders)
